; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_st5481_d.c_dout_end_short_frame.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_st5481_d.c_dout_end_short_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.FsmInst = type { %struct.st5481_adapter* }
%struct.st5481_adapter = type { %struct.st5481_d_out }
%struct.st5481_d_out = type { i32 }

@ST_DOUT_WAIT_FOR_UNDERRUN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.FsmInst*, i32, i8*)* @dout_end_short_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dout_end_short_frame(%struct.FsmInst* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.FsmInst*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.st5481_adapter*, align 8
  %8 = alloca %struct.st5481_d_out*, align 8
  store %struct.FsmInst* %0, %struct.FsmInst** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load %struct.FsmInst*, %struct.FsmInst** %4, align 8
  %10 = getelementptr inbounds %struct.FsmInst, %struct.FsmInst* %9, i32 0, i32 0
  %11 = load %struct.st5481_adapter*, %struct.st5481_adapter** %10, align 8
  store %struct.st5481_adapter* %11, %struct.st5481_adapter** %7, align 8
  %12 = load %struct.st5481_adapter*, %struct.st5481_adapter** %7, align 8
  %13 = getelementptr inbounds %struct.st5481_adapter, %struct.st5481_adapter* %12, i32 0, i32 0
  store %struct.st5481_d_out* %13, %struct.st5481_d_out** %8, align 8
  %14 = load %struct.st5481_d_out*, %struct.st5481_d_out** %8, align 8
  %15 = getelementptr inbounds %struct.st5481_d_out, %struct.st5481_d_out* %14, i32 0, i32 0
  %16 = load i32, i32* @ST_DOUT_WAIT_FOR_UNDERRUN, align 4
  %17 = call i32 @FsmChangeState(i32* %15, i32 %16)
  ret void
}

declare dso_local i32 @FsmChangeState(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
